# VibeCodedBS

./: .gitignore  LICENSE  README.md
FeedbackFormatter/: README.md  feedbackformatter.py
Outreach/: Cargo.toml  README.md  WSU Email Error
Outreach/src/: config.rs  main.rs
Outreach/src/api/: mod.rs
Outreach/src/auth/: mod.rs
Outreach/src/db/: mod.rs
Outreach/src/tui/: mod.rs
