[package]
name = "outreach"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.32.0", features = ["full"] }
reqwest = { version = "=0.11.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "=0.26.3"
crossterm = "=0.27.0"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
open = "=5.1.4"
dirs = "=5.0.1"
toml = "=0.5.11"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "=0.3.18"
chrono = { version = "0.4", features = ["serde"] }
